Adding departure creation feature on the frontend

--- a/railway-app-frontend/src/modules/root/app/components/nav-bar/nav-bar.component.html
+++ b/railway-app-frontend/src/modules/root/app/components/nav-bar/nav-bar.component.html
@@ -10,7 +10,7 @@
             <a [routerLink]="['/railway-system/shared/departures-timetable']" routerLinkActive="active"
                 >Home</a>
             <a *ngIf="loggedUser && !isAdmin" [routerLink]="['/railway-system/regular/financial-card']">Transactions</a>
-
+            <a *ngIf="loggedUser && isAdmin" [routerLink]="['/railway-system/admin/create-departure']">Departure</a>
         </div>
 
     </div>
