--- a/railway-app-frontend/src/modules/regular-user/components/transaction-row/transaction-row.component.html
+++ b/railway-app-frontend/src/modules/regular-user/components/transaction-row/transaction-row.component.html
@@ -2,7 +2,7 @@
     <table width="100%">
         <td width="10%">{{index + 1}}.</td>
         <td width="30%">-${{transaction.moneySpent}}</td>
-        <td width="30%">+{{index}}<mat-icon>payments</mat-icon></td>
+        <td width="30%">+{{transaction.tokensNum}}<mat-icon>payments</mat-icon></td>
         <td width="30%">{{transaction.timeStamp.split('T')[0]}}</td>
     </table>
 </div>
